<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/normal"
        android:title="@string/map_mode_normal">
    </item>
    <item
        android:id="@+id/hybrid"
        android:title="@string/map_mode_hybride" />
    <item
        android:id="@+id/satellite"
        android:title="@string/map_mode_satellite" />

    <item
        android:id="@+id/resetMap"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/reset_map" />

    <item
        android:id="@+id/secure_connect_scan"
        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
        android:showAsAction="ifRoom"
        android:title="@string/secure_connect"/>

</menu>